--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ on:
   workflow_dispatch:  # 手动触发
   schedule:
     # 使用 UTC 时间，UTC 时间 对应 北京时间 -8 小时
-    - cron: "0 0 * * *"  # UTC 00:00 / 北京时间 08:00
-    - cron: "0 1 * * *"  # UTC 01:00 / 北京时间 09:00
-    - cron: "0 9 * * *"  # UTC 09:00 / 北京时间 17:00
+    - cron: "55 23 * * *" 
+    - cron: "30 0 * * *" 
+    - cron: "55 9 * * *"  # UTC 09:00 / 北京时间 17:00
 
 # 配置并发控制，避免任务重叠执行
 concurrency:
